# mywork

./: CHANGELOG.md  README.org  mywork.cabal
app/: Defs.hs  Main.hs  Sync.hs
app/Defs/: JSON.hs
app/Panes/: AddProj.hs  Confirmation.hs  FileMgr.hs  Help.hs  Location.hs  LocationInput.hs  Messages.hs  NoteInput.hs  Notes.hs  Operations.hs  ProjInfo.hs  Projects.hs  Summary.hs
app/Panes/Common/: Inputs.hs
lib/: Defs.hs  Draw.hs  Events.hs  Sync.hs  Whole.hs
lib/Defs/: JSON.hs  Lenses.hs  Static.hs
lib/Panes/: AddProj.hs  Confirmation.hs  FileMgr.hs  Help.hs  Location.hs  LocationInput.hs  Messages.hs  NoteInput.hs  Notes.hs  Operations.hs  ProjInfo.hs  Projects.hs  Summary.hs
lib/Panes/Common/: Attrs.hs  Inputs.hs  QQDefs.hs
