cabal-version:      3.0
name:               mywork
version:            0.1.0.0
synopsis:
    Tool to keep track of what you have been working on, and where and when work should continue.

-- description:
homepage:           https://github.com/kquick/mywork
license:            ISC
license-file:       LICENSE
author:             Kevin Quick
maintainer:         kquick@galois.com
copyright:          (c) Kevin Quick, 2022
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common settings
    ghc-options:  -Wall
                  -Wcompat
                  -Wincomplete-uni-patterns
                  -Wsimplifiable-class-constraints
                  -Wpartial-fields
                  -fhide-source-paths
                  -threaded

executable mywork
    import:           settings
    main-is:          Main.hs
    autogen-modules:  Paths_mywork
    other-modules:    Paths_mywork
                      Defs
                      Panes.AddProj
                      Panes.Confirmation
                      Panes.FileMgr
                      Panes.Location
                      Panes.LocationInput
                      Panes.Operations
                      Panes.Projects
                      Panes.ProjInfo
                      Panes.Notes
                      Panes.Summary
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    base >= 4.13 && < 4.18
                    , brick >= 1.0 && < 1.2
                    , brick-panes
                    , aeson >= 2.1 && < 2.2
                    , bytestring >= 0.11 && < 0.12
                    , containers
                    , directory >= 1.3 && < 1.4
                    , filepath >= 1.4 && < 1.5
                    , lens >= 5.1 && < 5.2
                    , text
                    , text-zipper >= 0.12 && < 0.13
                    , time
                    , vector >= 0.13 && < 0.14
                    , vty >= 5.36 && < 5.37
